# blue_telemetry_tui

./: Cargo.toml  LICENSE  README.md  general.yml
data/: test.csv
src/: coord.rs  csv_reader.rs  main.rs  tui.rs
